--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c3VwZXJiLXN0YWxsaW9uLTMzLmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_6PR1CTTL8fWNZT7eODED1CTVzPUMV1ZkdJV55KxX5p
+OPENCAGE_API_KEY=55f1eed0f6b740e19fd0f385a28ec82c
