--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.456.0",
     "next": "15.0.1",
     "node-fetch": "^3.3.2",
+    "opencage-api-client": "^1.0.7",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
